--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,3 +9,21 @@ body{
     background-position: center;
     
 }
+
+::-webkit-scrollbar{
+    cursor: pointer;
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    cursor: pointer;
+    background: #555;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: #121212;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #242424;
+}
+
